<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".InscriptionFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/blue_sky"
        android:layout_marginTop="@dimen/dim_top"
        android:textSize="@dimen/dim_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inscription" />

    <EditText
        android:id="@+id/txtFirstName"
        android:hint="@string/first_name"
        android:layout_marginTop="@dimen/dim_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/txtLastName"
        android:hint="@string/last_name"
        android:layout_marginTop="@dimen/dim_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_marginTop="@dimen/dim_top"
        android:id="@+id/txtDegrees"
        android:text="@string/degrees"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <CheckBox

        android:layout_marginLeft="@dimen/dim_degrees"
        android:id="@+id/cbUnderGraduate"
        android:text="@string/under_graduate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <CheckBox

        android:layout_marginLeft="@dimen/dim_degrees"
        android:id="@+id/cbBachelor"
        android:text="@string/bachelor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <CheckBox

        android:layout_marginLeft="@dimen/dim_degrees"
        android:id="@+id/cbMaster"
        android:text="@string/master"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <Button
        android:id="@+id/btnSave"
        android:textColor="@color/white"
        android:backgroundTint="@color/blue_dark"
        android:layout_margin="@dimen/dim_button"
        android:layout_marginTop="@dimen/dim_top"
        android:text="@string/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>