<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
<TextView
    android:textColor="@color/blue_sky"
    android:textStyle="bold"
    android:textSize="@dimen/dim_title"
    android:gravity="center"
    android:text="@string/connection"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"/>

    <EditText

        android:id="@+id/txtLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim_top"
        android:hint="@string/login" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim_top"
        android:hint="@string/password"
        android:inputType="textPassword" />

<Button
    android:textColor="@color/white"
    android:layout_marginLeft="@dimen/dim_button"
    android:layout_marginRight="@dimen/dim_button"
    android:id="@+id/btnConnect"
    android:backgroundTint="@color/blue_dark"
    android:layout_marginTop="@dimen/dim_top"
    android:text="@string/connect"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"/>
    <Button
        android:textColor="@color/white"
        android:layout_marginLeft="@dimen/dim_button"
        android:layout_marginRight="@dimen/dim_button"
        android:id="@+id/btnSign"
        android:backgroundTint="@color/blue_sky"
        android:layout_marginTop="@dimen/dim_top"
        android:text="@string/sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>